After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 655970 - Prevent possible crash if device disappears
Prevent possible crash if device disappears
Status: RESOLVED FIXED
Product: GUPnP
Classification: Other
Component: gupnp
unspecified
Other All
: Normal normal
: ---
Assigned To: GUPnP Maintainers
GUPnP Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-04 13:07 UTC by Jens Georg
Modified: 2011-08-29 20:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Prevent possible crash if device disappears (1.16 KB, patch)
2011-08-04 13:07 UTC, Jens Georg
accepted-commit_now Details | Review

Description Jens Georg 2011-08-04 13:07:45 UTC
Fixes a slight logic issue in the check, causing a crash on usb
networking devices
Comment 1 Jens Georg 2011-08-04 13:07:47 UTC
Created attachment 193246 [details] [review]
Prevent possible crash if device disappears

Might happen e.g. on usbnet devices when cable is unplugged.
Comment 2 Zeeshan Ali 2011-08-04 13:56:56 UTC
Review of attachment 193246 [details] [review]:

Looks fine!
Comment 3 Jens Georg 2011-08-04 14:30:26 UTC
I just noticed that the opposite use-case also crashes, pluggin the usb cable while running. Don't have time to look into this now, will provide a combined patch when back.
Comment 4 Jens Georg 2011-08-29 16:02:34 UTC
ah, the crash on plugging the cable was caused by a debug message. Will commit this then.
Comment 5 Jens Georg 2011-08-29 20:50:28 UTC
pushed