Prevent possible crash if device disappears

Might happen e.g. on usbnet devices when cable is unplugged.

https://bugzilla.gnome.org/show_bug.cgi?id=655970